force-app/main/default/objects/Ad_Video__c/Ad_Video__c.object-meta.xml
<CustomObject>
    <label>Ad Video</label>
    <nameField>
        <label>Ad Video Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>