force-app/main/default/objects/Ad_Video__c/fields/Ad_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Ad_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will help to group multiple videos into a single campaign</description>
    <label>Ad Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Ad Videos</relationshipLabel>
    <relationshipName>Ad_Videos</relationshipName>
    <type>Lookup</type>
</CustomField>