force-app/main/default/objects/Ad_Video__c/fields/Product_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Product_Specifications__c</fullName>
    <label>Product Specifications</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>