force-app/main/default/objects/Ad_Video__c/fields/Suggestion_Questions__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Questions__c</fullName>
    <description>Comma-separated list of suggested questions for this video. Example: What sizes are available?,Is it eco-friendly?,What materials are used?</description>
    <inlineHelpText>Enter suggested questions separated by commas. These will appear as clickable buttons in the chat interface.</inlineHelpText>
    <label>Suggestion Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>