force-app/main/default/objects/Ad_Video__c/fields/Video_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Video_Source_Type__c</fullName>
    <label>Video Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static Resource</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>